--- a/EdgeDetection/EdgeDetection.csproj
+++ b/EdgeDetection/EdgeDetection.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="System.Drawing.Common" Version="7.0.0-preview.7.22375.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
