--- a/EdgeDetection/EdgeDetectionApp.csproj
+++ b/EdgeDetection/EdgeDetectionApp.csproj
@@ -9,8 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
     <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
-    <PackageReference Include="System.Drawing.Common" Version="7.0.0-preview.7.22375.6" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0-rc.1.22426.10" />
+    <PackageReference Include="MvvmDialogs" Version="9.1.0" />
+    <PackageReference Include="System.Drawing.Common" Version="7.0.0-rc.1.22426.10" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="4.10.0" />
   </ItemGroup>
 
