edge detecion classes improvments, gui options

--- a/EdgeDetection/EdgeDetectionApp.csproj
+++ b/EdgeDetection/EdgeDetectionApp.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EdgeDetectionLib2\EdgeDetectionLib.csproj" />
+    <ProjectReference Include="..\EdgeDetectionLib\EdgeDetectionLib.csproj" />
   </ItemGroup>
 
 </Project>
