New app appearance

--- a/EdgeDetectionApp/EdgeDetectionApp.csproj
+++ b/EdgeDetectionApp/EdgeDetectionApp.csproj
@@ -10,8 +10,30 @@
 
   <ItemGroup>
     <None Remove="Resources\Icons\cancel.png" />
+    <None Remove="Resources\Icons\edge.png" />
+    <None Remove="Resources\Icons\image.png" />
     <None Remove="Resources\Icons\minimize.png" />
+    <None Remove="Resources\Icons\new.png" />
+    <None Remove="Resources\Icons\open-file.png" />
     <None Remove="Resources\Icons\restore-down.png" />
+    <None Remove="Resources\Icons\save-as.png" />
+    <None Remove="Resources\Icons\settings.png" />
+    <None Remove="Resources\Icons\webcam.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\Icons\image.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Icons\open-file.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\Icons\new.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
   <ItemGroup>
@@ -33,10 +55,22 @@
     <Resource Include="Resources\Icons\cancel.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Resources\Icons\edge.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\Icons\minimize.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Resources\Icons\restore-down.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Icons\save-as.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Icons\settings.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Icons\webcam.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
