--- a/EdgeDetectionLib/EdgeDetectionLib.csproj
+++ b/EdgeDetectionLib/EdgeDetectionLib.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0-windows</TargetFramework>
@@ -10,5 +10,11 @@
   <ItemGroup>
     <PackageReference Include="System.Drawing.Common" Version="7.0.0-rc.2.22472.3" />
   </ItemGroup>
+
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+			<_Parameter1>EdgeDetectionLib.Tests</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
 
 </Project>
