--- a/EdgeDetectionApp/EdgeDetectionApp.csproj
+++ b/EdgeDetectionApp/EdgeDetectionApp.csproj
@@ -20,7 +20,6 @@
     <None Remove="Resources\Icons\settings.png" />
     <None Remove="Resources\Icons\snapshot.png" />
     <None Remove="Resources\Icons\webcam.png" />
-    <None Remove="Resources\SampleImage\bird.JPG" />
   </ItemGroup>
 
   <ItemGroup>
@@ -79,9 +78,12 @@
     <Resource Include="Resources\Icons\webcam.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
-    <Resource Include="Resources\SampleImage\bird.JPG">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Resources\SampleImage\bird.JPG">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
